--- a/src/App/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/App/HomeBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,166 @@
-<h2 style="text-align: center">Website is UnderConstruction</h2>
+{% extends"::base.html.twig" %}
+{% block title %}{% endblock %}
+{% block body %}
+    <div class="clearfix"></div>
+    <!--slider image area-->
+    <div class="wrap" style="width: 94%; text-align: center; margin: 0 auto; background-color: #ffffff;">
+        <div class="main" style="width: 96%; margin:0 auto;">
+            <img src="{{ asset('bundles/main/') }}img/slider.png" style="width: 100%;" alt="">
+            <div style="border: 2px solid #e0dfdf; margin-top: 3px;"></div>
+            <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+            <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+            <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+        </div>
+    </div>
+    <!--slider image area-->
+
+
+
+    <div class="wrap" style="width: 94%; padding-top: 15px; background-color:#ffffff; margin: 0 auto;">
+        <div class="main" style="width: 96%; margin: 0 auto;">
+            <div class="col-md-12" style="margin-top: 25px;">
+                <div class="col-md-9" style="padding-left: 0px;">
+                    <div style="text-align: center; font-size: 18px; color: rgb(255, 0, 0); font-weight: bold;">
+                        *** USA SALES ONLY – WE DO NOT SHIP TO OHIO, FLORIDA, LOUISIANA, TEXAS ***
+                    </div>
+                    <div style="text-align: center; font-size: 18px; color: #000; font-weight: bold;">
+                        18+ ONLY / ALL PRODUCTS NOT FOR HUMAN CONSUMPTION
+                    </div>
+                    <div style="text-align: center; font-size: 18px; color: #3366ff; font-weight: bold;">
+                        FREE SHIPPING – PRIORITY 3 to 7 BUSINESS DAY DELIVERY
+                    </div>
+
+                    <!--top bottom padding div-->
+                    <div style="padding: 5px 0px;"></div>
+                    <!--top bottom padding div-->
+
+                    <!--products images start-->
+
+
+                    {% for item in pro|reverse %}
+                        <div class="col-md-4" style=" padding: 10px;">
+                            <div style="width: 100%; margin: 0 auto;">
+                                <div>
+                                    <a href="{{ path('home_homepage_single',{id:item.id,name:item.name|replace({' ':'_'})}) }}"><img style="height: 250px" class="img" src="{{ asset(item.image) }}" alt=""></a>
+                                </div>
+                                {% if item.quantity == 0 %}
+                                    <div class="out-of-stock">
+                                        <img src="{{ asset('bundles/main/') }}img/out-of-stock.png" alt="">
+                                    </div>
+                                {% endif %}
+                                <div id="added{{ item.id }}" style="display: none;" class="added">
+                                    <img src="{{ asset('bundles/main/') }}img/added.png" alt="">
+                                </div>
+                                <div id="load{{ item.id }}" style="display: none" class="loader">
+                                    <img class="load-img" src="{{ asset('bundles/main/') }}img/load.gif" alt="">
+                                </div>
+
+
+                                <div class="shadow"></div>
+
+                                <div class="h-price" style="text-align: center;">
+                                    <h6>{{ item.name }}</h6>
+                                    <div style="color: #7C7B7B; text-align: center; font-size: 20px; font-family: 'Oswald', sans-serif;">
+                                        ${{ item.price }}
+                                    </div>
+                                </div>
+
+                                <div class="btns">
+                                    {% if item.quantity == 0 %}
+                                        <a href="{{ path('home_homepage_single',{id:item.id,name:item.name|replace({' ':'_'})}) }}" class="readmore">READMORE</a>
+                                    {% else %}
+                                        <a onclick="addtocart({{ item.id }},1)" href="javascript:void(0)" class="cart">ADD TO CART</a>
+                                    {% endif %}
+                                    <a href="{{ path('home_homepage_single',{id:item.id,name:item.name|replace({' ':'_'})}) }}" class="detail">DETAILS</a>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    {% endfor %}
+                    <!--products images end-->
+                    <div class="clearfix"></div>
+
+                    <!--top bottom padding div-->
+                    <div style="padding: 20px 0px;"></div>
+                    <!--top bottom padding div-->
+
+                    <!--bottom paragraph start-->
+                    <div class="para" style="margin-top: 15px;">
+                        Products sold in our store are not to be used by or sold to anyone under the age of 18. Buyers agree to abide by all state and federal regulations. All Products offered for Sale or Sold are NOT MEANT FOR HUMAN CONSUMPTION. We do not ship to anywhere that does not comply with state law. Please do your research and know the law regulations in your state and county prior to making the purchase.
+                        <br><br>
+                        You also affirm and agree to the following: <strong> That you are 18 years of age or older.  NO EXCEPTIONS!</strong>
+                        <br><br>
+                        Each time you use or cause access to this web site, you agree to be bound by these Terms of use, as amended from time to time with or without notice to you. In addition, if you are using a particular service on this web site or accessed via this web site, you will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these Terms of use.
+                        <br><br>
+                        Buyer agrees that any herbs, herbal blends, and or any other products on this site are legal to sell and/or purchase in your physical location or point of receipt of shipment. You agree to use our products for their intended purposes only. You waive without exception your right to hold Seller liable in any way for the misuse of Seller’s products. The Buyer agrees that purchasing products from Relax Minds indicates full compliance with applicable laws, including but not limited to county, state, and/ or Federal law. Spice-Incense.com cannot be held liable for the Buyer purchasing items not legal for their area.
+                    </div>
+
+                    <div style="margin: 35px 0px;">
+                        <h4 class="heading">Product Notice</h4>
+                        <p class="para">
+                            Buyer understands that botanical potpourri products are offered for household use only and that these products are not intended for human consumption (i.e. oral consumption or inhalation of smoke/ hot vapors). If you as Buyer have any medical concerns or questions regarding the use of herbs or herbal blends offered on this site please consult with a physician. Buyer agrees to take full responsibility and liability for any purchases made from Seller, Buyer agrees to indemnify and hold harmless Seller, its suppliers, employees, owners and agents for and against any and all losses, damages and expenses, including legal fees, which may result from the use, intended or otherwise, of any product provided by Seller. Buyer understands that Seller’s offer of any product is void where prohibited, and that it is Buyer’s responsibility to check and abide by local, state/province and government laws and regulations in accordance with the use of any product provided through Relax Minds. All products sold on Spice-Incense.com are sold and intended for use by individuals 18 years of age or older. Buyer must be at least 18 years of age and understands that by submitting an order to the seller via the electronic processes here-in, buyer affirms they are at least 18 years of age.
+                        </p>
+                    </div>
+                    <!--bottom paragraph end-->
+                </div>
+                <!--left side bar end-->
+
+                <!--right side bar start-->
+                <div class="col-md-3" style="margin: 0px; padding-right: 0px; background: ;">
+                    <div style="color: #c58408; font-family: 'Oswald', sans-serif; font-weight: bold; font-size: 15px;">
+                        WELCOME TO COMPANYNAME.COM
+                    </div>
+                    <div style="padding: 10px 0px; font-family: 'Oswald', sans-serif;">
+                        We are the leading supplier of quality USA Made Premium Herbal Incense. Our prices will not be beaten!
+                    </div>
+                    <div>
+                        <img src="img/side.PNG" style="padding-bottom:15px;" alt="">
+                    </div>
+                    <div>
+                        <h4 style="margin-top: 15px; font-family: 'Oswald', sans-serif;">Signup For Exclusive Discounts!</h4>
+                        <form action="" method="">
+                            <div style="margin: 5px 0px; font-family: 'Oswald', sans-serif;">First Name:</div>
+                            <div><input type="text" style="width: 100%; padding: 5px; margin-bottom: 5px;" placeholder="Your First Name"></div>
+                            <div style="margin: 5px 0px; font-family: 'Oswald', sans-serif;">Email Address:</div>
+                            <div><input type="text" style="width: 100%; padding: 5px; margin-bottom: 5px;" placeholder="Your Email Address"></div>
+                            <div style="margin: 8px 0px;"><input type="submit" value="Signup"></div>
+                        </form>
+                    </div>
+                    <div style="margin-top: 30px;">
+                        <img src="{{ asset('bundles/main/') }}img/card.png" style="width:100%;" alt="">
+                    </div>
+                    <div style="font-size: 15px; margin: 5px 0px; font-family: 'Oswald', sans-serif; font-weight: bold;">
+                        We accept most major credit cards!
+                    </div>
+                    <div>
+                        <img src="{{ asset('bundles/main/') }}img/Badge1-300x300.png" style="width:100%;" alt="">
+                    </div>
+                    <div>
+                        <img src="{{ asset('bundles/main/') }}img/badge2-300x300.png" style="width:100%;" alt="">
+                    </div>
+                </div>
+                <!--right side bar end-->
+            </div>
+        </div>
+        <div class="clearfix"></div>
+
+        <!--bordered divs start-->
+        <div class="col-md-12">
+            <div class="wrap" style="width: 100%; margin: 0 auto;">
+                <div class="main" style="width: 96%; margin: 0 auto;">
+                    <div class="col-md-12">
+                        <div style="border: 2px solid #e0dfdf; margin-top: 3px;"></div>
+                        <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                        <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                        <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--bordered divs end-->
+        <div class="clearfix"></div>
+    </div>
+
+{% endblock %}
+
