--- a/src/App/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/App/HomeBundle/Resources/views/Default/index.html.twig
@@ -115,7 +115,7 @@
                         We are the leading supplier of quality USA Made Premium Herbal Incense. Our prices will not be beaten!
                     </div>
                     <div>
-                        <img src="img/side.PNG" style="padding-bottom:15px;" alt="">
+                        <img src="{{ asset('bundles/main/') }}img/side.PNG" style="padding-bottom:15px;" alt="">
                     </div>
                     <div>
                         <h4 style="margin-top: 15px; font-family: 'Oswald', sans-serif;">Signup For Exclusive Discounts!</h4>
