--- a/src/App/AdminBundle/Resources/views/Default/orders.html.twig
+++ b/src/App/AdminBundle/Resources/views/Default/orders.html.twig
@@ -1,4 +1,4 @@
-{% extends"::customer.html.twig" %}
+{% extends"::admin.html.twig" %}
 {% block body %}
     <section class="content-header">
         <h1>
