--- a/src/App/HomeBundle/Resources/views/Default/tsp.html.twig
+++ b/src/App/HomeBundle/Resources/views/Default/tsp.html.twig
@@ -43,7 +43,7 @@
 
                     <!--products images start-->
                     {% if pro|length != 0 %}
-                        {% for item in pro|reverse %}
+                        {% for item in pro %}
                             <div class="col-md-4" style=" padding: 10px;">
                                 <div style="width: 100%; margin: 0 auto;">
                                     <div>
