--- a/app/Resources/views/customer.html.twig
+++ b/app/Resources/views/customer.html.twig
@@ -99,16 +99,22 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header">MAIN NAVIGATION</li>
-                <li class="treeview">
+                <li>
                     <a href="">
                         <i class="fa fa-dashboard"></i> <span>Inventory Management</span>
                     </a>
 
                 </li>
-                <li class="treeview">
+                <li>
                     <a href="{{ path('home_homepage_logout') }}">
                         <i class="fa fa-sign-out"></i>
                         <span>Log Out</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('home_homepage') }}">
+                        <i class="fa fa-sign-out"></i>
+                        <span>Go to HomePage</span>
                     </a>
                 </li>
             </ul>
