--- a/src/App/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AdminBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,25 @@
 {% extends"::admin.html.twig" %}
 {% block body %}
-    Hello {{ name }}!
+    <section class="content-header">
+        <h1>
+            Dashboard
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        </ol>
+    </section>
+
+    <section class="content">
+        <!-- /.row -->
+
+        <!-- Main row -->
+        <div class="row">
+            <!-- Left col -->
+            <div class="col-md-offset-2 col-md-8 text-center" style="margin-top: 150px">
+                <h1>Welcome To Dashboard</h1>
+            </div>
+
+        </div>
+        <!-- /.row -->
+    </section>
 {% endblock %}
