--- a/src/App/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/App/HomeBundle/Resources/views/Default/index.html.twig
@@ -37,7 +37,7 @@
                     <!--products images start-->
 
 
-                    {% for item in pro|reverse %}
+                    {% for item in pro %}
                         <div class="col-md-4" style=" padding: 10px;">
                             <div style="width: 100%; margin: 0 auto;">
                                 <div>
