--- a/src/App/HomeBundle/Resources/views/Default/faq.html.twig
+++ b/src/App/HomeBundle/Resources/views/Default/faq.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="clearfix"></div>
     <!--slider image area-->
-    <div class="wrap" style="width: 94%; padding-top: 1px; text-align: center; margin: 0 auto; background-color: #ffffff;">
+    <div class="wrap" style="width:; padding-top: 1px; text-align: center; margin: 0 auto; background-color: #ffffff;">
         <div class="main" style="width: 96%; margin:0 auto;">
             <div style="border: 2px solid #e0dfdf; margin-top: 3px;"></div>
             <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
@@ -11,9 +11,11 @@
             <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
         </div>
     </div>
+    <!--slider image area-->
 
 
-    <div class="wrap" style="width: 94%; padding-top: 15px; background-color:#ffffff; margin: 0 auto;">
+
+    <div class="wrap" style="width:; padding-top: 15px; background-color:#ffffff; margin: 0 auto;">
         <div class="main" style="width: 96%; margin: 0 auto;">
             <div class="col-md-12" style="margin-top: 25px;">
                 <div class="col-md-9" style="padding-left: 0px;">
@@ -704,6 +706,24 @@
         </div>
         <!--right side bar end-->
     </div>
+    </div>
+    <div class="clearfix"></div>
+
+    <!--bordered divs start-->
+    <div class="col-md-12">
+        <div class="wrap" style="width: 100%; margin: 0 auto;">
+            <div class="main" style="width: 96%; margin: 0 auto;">
+                <div class="col-md-12">
+                    <div style="border: 2px solid #e0dfdf; margin-top: 3px;"></div>
+                    <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                    <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                    <div style="border-top: 1px solid #e0dfdf; margin-top: 3px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--bordered divs end-->
+    <div class="clearfix"></div>
     </div>
     <div class="clearfix"></div>
 
